# pinpoint-engine

./: .gitignore  CMakeLists.txt  README.md
Pinpoint-Engine/: Pinpoint-Engine.vcxproj
Pinpoint-Engine/src/: Test.cpp  Test.h
Sandbox/: Sandbox.vcxproj
Sandbox/src/: Application.cpp
bin-int/Debug-x64/PinpointEngine/: PinpointEngine.dll.recipe  PinpointEngine.ilk  vc143.idb
bin-int/Debug-x64/PinpointEngine/PinpointEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PinpointEngine.lastbuildstate  PinpointEngine.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
bin-int/Debug-x64/Sandbox/: Sandbox.exe.recipe  Sandbox.ilk  vc143.idb
bin-int/Debug-x64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: main.cpp
src/ObjectsAPI/: Objects.h  Shapes.h
src/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h
src/Pinpoint/: pinpoint.h
src/RenderingAPI/: Buffer.cpp  Buffer.h  Renderer.cpp  Renderer.h  points.cpp  points.h
src/RenderingAPI/OpenGL/: OpenGLArrayObj.cpp  OpenGLArrayObj.h  OpenGLBuffer.cpp  OpenGLBuffer.h
src/RenderingAPI/Shaders/: Shader.cpp  Shader.h
src/RenderingAPI/shaders/: VertexShader.h
